--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Ibra Academia</title>
 </head>
 
-<body>
+<body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
         <img src="src/images/logo.jpeg" class="h-10 lg:hidden" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase animate__animated animate__slideInDown
@@ -48,7 +48,7 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center">
+    <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center h-81h">
         <h1 class="uppercase font-barlow text-2xl text-white pt-4">- Bem vindos! -</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
             <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
@@ -57,7 +57,7 @@
 
     </main>
 
-    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow">
+    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
