--- a/circuito.html
+++ b/circuito.html
@@ -23,8 +23,8 @@
 
 <body>
     <header class="flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
-        <nav class="hidden bg-slate-600 h-screen w-screen absolute top-14 right-0 p-4 uppercase animate__animated animate__slideInDown
+        <img src="src/images/circuito-logo.jpg" class="h-12 lg:h-16" alt="Logo do circuito Ibra de Tênis de Mesa">
+        <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
                 <li class="border-b-2 border-black border-solid py-3 text-white lg:py-1 lg:border-none lg:text-black li__hover">
