--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
-        <img src="src/images/logo.jpeg" class="h-12 lg:h-16" alt="Logo da Ibra Academia de Tênis de Mesa">
+        <img src="src/images/logo.jpeg" class="h-12 lg:h-14" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="header__li--style !pt-0"><a href="">Início</a></li>
+                <li class="header__li--style"><a href="">Início</a></li>
                 <li class="header__li--style"><a href="">Sobre</a></li>
                 <li class="header__li--style"><a href="">Parceiros</a></li>
                 <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
@@ -49,7 +49,8 @@
     </header>
 
     <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
-        <h1 id="main__titulo" class="uppercase font-barlow text-2xl text-white pt-8 animate__animated animate__flash animate__repeat-3">- Bem vindos! -</h1>
+        <h2 id="main__subtitulo" class="uppercase font-barlow text-2xl text-white pt-8 animate__animated animate__flash animate__repeat-3">- Bem vindos! -</h2>
+        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra a Fábrica de campeões</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
             <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
             <a href="circuito.html" id="main__button" class="main__button--style button__hover lg:w-3/5">Mais informações</a>
