Updating parceiros page

--- a/parceiros.html
+++ b/parceiros.html
@@ -18,7 +18,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
-    <title>Ibra Academia</title>
+    <title>Parceiros</title>
 </head>
 
 <body class="box-border">
@@ -29,7 +29,7 @@
             <ul class="lg:flex justify-center gap-x-10">
                 <li class="header__li--style"><a href="">Início</a></li>
                 <li class="header__li--style"><a href="">Sobre</a></li>
-                <li class="header__li--style"><a href="parceiros.html">Parceiros</a></li>
+                <li class="header__li--style"><a href="">Parceiros</a></li>
                 <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
                 <li class="header__li--style"><a href="">Contato</a></li>
             </ul>
@@ -48,17 +48,21 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
-        <h2 id="main__subtitulo" class="uppercase font-barlow text-2xl text-white pt-8 animate__animated animate__flash animate__repeat-3">- Bem vindos! -</h2>
-        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra a Fábrica de campeões</h1>
-        <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
-            <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
-            <a href="circuito.html" id="main__button" class="main__button--style button__hover lg:w-3/5">Mais informações</a>
-        </div>
-
+    <main style="background-image: url('src/images/2.jpg'); background-size: cover;"
+        class="flex flex-col items-center h-82h">
+        <h1 class="uppercase text-white text-3xl font-barlow py-4">Nossos parceiros</h1>
+        <article class="bg-slate-400 p-2">
+            <img src="src/images/parceiros-cbc.jpeg" alt="">
+            <div id="article__text--container" class="m-4 font-barlow">
+                <h2 class="uppercase text-white font-semibold text-center text-2xl">Inspirar para o esporte e formar campeões</h2>
+                <p class="text-justify text-white">O Comitê Brasileiro de Clubes é uma associação civil de origem esportiva criado em 1990 com a missão
+                de desenvolver e implementar a política de formação de atletas, por meio de apoio aos clubes.</p>
+            </div>
+        </article>
     </main>
 
-    <footer class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
+    <!-- <footer
+        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
         <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
         <div id="footer__container--icons" class="flex gap-x-4">
             <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
@@ -68,7 +72,7 @@
             <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i
                     class="fa-solid fa-location-dot"></i></a>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="src/js/main.js"></script>
 </body>
