--- a/parceiros.html
+++ b/parceiros.html
@@ -51,12 +51,24 @@
     <main style="background-image: url('src/images/2.jpg'); background-size: cover;"
         class="flex flex-col items-center h-82h">
         <h1 class="uppercase text-white text-3xl font-barlow py-4">Nossos parceiros</h1>
-        <article class="bg-slate-400 p-2">
-            <img src="src/images/parceiros-cbc.jpeg" alt="">
+        <article class="bg-slate-400 p-2 flex flex-col items-center">
+            <img src="src/images/parceiros-cbc.jpeg" class="rounded w-10/12" alt="">
             <div id="article__text--container" class="m-4 font-barlow">
-                <h2 class="uppercase text-white font-semibold text-center text-2xl">Inspirar para o esporte e formar campeões</h2>
-                <p class="text-justify text-white">O Comitê Brasileiro de Clubes é uma associação civil de origem esportiva criado em 1990 com a missão
-                de desenvolver e implementar a política de formação de atletas, por meio de apoio aos clubes.</p>
+                <h2 class="uppercase text-white font-semibold text-center text-2xl">Inspirar para o esporte e formar
+                    campeões</h2>
+                <p class="text-justify text-white">O Comitê Brasileiro de Clubes é uma associação civil de origem
+                    esportiva criado em 1990 com a missão
+                    de desenvolver e implementar a política de formação de atletas, por meio de apoio aos clubes.</p>
+            </div>
+        </article>
+
+        <article class="bg-slate-400 p-2 flex flex-col items-center">
+            <img src="src/images/parceiros-asg.jpg" class="rounded w-10/12" alt="">
+            <div id="article__text--container" class="m-4 font-barlow">
+                <h2 class="uppercase text-white font-semibold text-center text-2xl">AGS tornando seus negócios possíveis
+                </h2>
+                <p class="text-justify text-white">80 anos de tradição servindo a toda uma região. Compre as melhores
+                    marcas. Tudo o que você precisa está aqui!</p>
             </div>
         </article>
     </main>
