Adding last parceiro

--- a/parceiros.html
+++ b/parceiros.html
@@ -48,28 +48,42 @@
         </div>
     </header>
 
-    <main style="background-image: url('src/images/2.jpg'); background-size: cover;"
-        class="flex flex-col items-center h-82h">
+    <main class="bg-slate-500 flex flex-col items-center h-82h">
         <h1 class="uppercase text-white text-3xl font-barlow py-4">Nossos parceiros</h1>
-        <article class="bg-slate-400 p-2 flex flex-col items-center">
+        <article class="bg-white p-2 flex flex-col items-center">
             <img src="src/images/parceiros-cbc.jpeg" class="rounded w-10/12" alt="">
-            <div id="article__text--container" class="m-4 font-barlow">
-                <h2 class="uppercase text-white font-semibold text-center text-2xl">Inspirar para o esporte e formar
+            <div id="article__text--container" class="m-4 font-barlow w-10/12">
+                <h2 class="uppercase font-semibold text-center text-xl">Inspirar para o esporte e formar
                     campeões</h2>
-                <p class="text-justify text-white">O Comitê Brasileiro de Clubes é uma associação civil de origem
+                <p class="text-justify">O Comitê Brasileiro de Clubes é uma associação civil de origem
                     esportiva criado em 1990 com a missão
                     de desenvolver e implementar a política de formação de atletas, por meio de apoio aos clubes.</p>
             </div>
         </article>
 
-        <article class="bg-slate-400 p-2 flex flex-col items-center">
+        <article class="bg-white p-2 flex flex-col items-center">
             <img src="src/images/parceiros-asg.jpg" class="rounded w-10/12" alt="">
-            <div id="article__text--container" class="m-4 font-barlow">
-                <h2 class="uppercase text-white font-semibold text-center text-2xl">AGS tornando seus negócios possíveis
+            <div id="article__text--container" class="m-4 font-barlow w-10/12">
+                <h2 class="uppercase font-semibold text-center text-xl">AGS tornando seus negócios possíveis
                 </h2>
-                <p class="text-justify text-white">80 anos de tradição servindo a toda uma região. Compre as melhores
+                <p class="text-justify">80 anos de tradição servindo a toda uma região. Compre as melhores
                     marcas. Tudo o que você precisa está aqui!</p>
             </div>
+        </article>
+
+        <article class="bg-white p-2 flex flex-col items-center">
+            <img src="src/images/parceiros-rc.jpg" class="rounded w-10/12" alt="">
+            <div id="article__text--container" class="m-4 font-barlow w-10/12">
+                <h2 class="uppercase font-semibold text-center text-xl">Constantemente desafiando a entregar
+                    o melhor aos nossos clientes</h2>
+                <p class="text-justify">Fundado em 2016, Rocha & Coningham Advogados Associados atua com
+                    destaque na advocacia de litígios e na estruturação de medidas para a prevenção de demandas e
+                    obtenção dos melhores resultados naquelas em trâmite.</p>
+            </div>
+        </article>
+
+        <article class="bg-white p-2 flex flex-col items-center">
+            <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12" alt="">
         </article>
     </main>
 
