--- a/parceiros.html
+++ b/parceiros.html
@@ -23,24 +23,17 @@
 
 <body class="box-border">
     <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
-        <img src="src/images/logo.jpeg" class="h-12 lg:h-14" alt="Logo da Ibra Academia de Tênis de Mesa">
+        <img src="src/images/circuito-logo.jpg" class="h-12 lg:h-14" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
-                <li class="header__li--style"><a href="">Início</a></li>
+                <li class="header__li--style"><a href="index.html">Início</a></li>
                 <li class="header__li--style"><a href="">Sobre</a></li>
-                <li class="header__li--style"><a href="">Parceiros</a></li>
+                <li class="header__li--style"><a href="parceiros.html">Parceiros</a></li>
                 <li class="header__li--style"><a href="circuito.html">O circuito</a></li>
                 <li class="header__li--style"><a href="">Contato</a></li>
             </ul>
         </nav>
-
-        <!-- <div id="header__logo--container"
-            class="hidden lg:flex lg:items-center lg:justify-center lg:gap-x-4 lg:w-full lg:bg-slate-700 lg:text-white lg:uppercase">
-            <p>Academia Ibra</p>
-            <img src="src/images/logo.jpeg" class="h-10" alt="Logo da Ibra Academia de Tênis de Mesa">
-            <p>Fábrica de Campeões</p>
-        </div> -->
 
         <div id="header__container--icons">
             <img src="src/images/bar.png" id="header__icons--menu" class="h-8 lg:hidden" alt="Ícone do menu">
@@ -50,10 +43,10 @@
 
     <main class="bg-slate-500 flex flex-col items-center h-82h">
         <h1 class="uppercase text-white text-3xl font-barlow py-4">Nossos parceiros</h1>
-        <article class="bg-white p-2 flex flex-col items-center">
+        <article class="bg-white p-2 flex flex-col items-center pt-8 pb-8">
             <img src="src/images/parceiros-cbc.jpeg" class="rounded w-10/12" alt="">
             <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl">Inspirar para o esporte e formar
+                <h2 class="uppercase font-semibold text-center text-xl pb-2">Inspirar para o esporte e formar
                     campeões</h2>
                 <p class="text-justify">O Comitê Brasileiro de Clubes é uma associação civil de origem
                     esportiva criado em 1990 com a missão
@@ -61,20 +54,20 @@
             </div>
         </article>
 
-        <article class="bg-white p-2 flex flex-col items-center">
+        <article class="bg-white p-2 flex flex-col items-center pb-8">
             <img src="src/images/parceiros-asg.jpg" class="rounded w-10/12" alt="">
             <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl">AGS tornando seus negócios possíveis
+                <h2 class="uppercase font-semibold text-center text-xl pb-2">AGS tornando seus negócios possíveis
                 </h2>
                 <p class="text-justify">80 anos de tradição servindo a toda uma região. Compre as melhores
                     marcas. Tudo o que você precisa está aqui!</p>
             </div>
         </article>
 
-        <article class="bg-white p-2 flex flex-col items-center">
+        <article class="bg-white p-2 flex flex-col items-center pb-8">
             <img src="src/images/parceiros-rc.jpg" class="rounded w-10/12" alt="">
             <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl">Constantemente desafiando a entregar
+                <h2 class="uppercase font-semibold text-center text-xl pb-2">Constantemente desafiando a entregar
                     o melhor aos nossos clientes</h2>
                 <p class="text-justify">Fundado em 2016, Rocha & Coningham Advogados Associados atua com
                     destaque na advocacia de litígios e na estruturação de medidas para a prevenção de demandas e
@@ -86,19 +79,6 @@
             <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12" alt="">
         </article>
     </main>
-
-    <!-- <footer
-        class="footer bg-slate-700 text-white flex flex-col items-center gap-y-2 py-2 font-barlow absolute bottom-0 w-screen">
-        <h2 class="uppercase">Academia Ibra Tênis de Mesa</h2>
-        <div id="footer__container--icons" class="flex gap-x-4">
-            <a href="https://api.whatsapp.com/send?phone=81998320016&text=Como%20podemos%20ajudá-lo?" target="_blank"><i
-                    class="fa-brands fa-whatsapp"></i></a>
-            <a href="https://www.instagram.com/ibratdm/"><i class="fa-brands fa-instagram" target="_blank"></i></a>
-            <a href="#" target="_blank"><i class="fa-regular fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/LLFepdFvPgzSioes5?coh=178571&entry=tt" target="_blank"><i
-                    class="fa-solid fa-location-dot"></i></a>
-        </div>
-    </footer> -->
 
     <script src="src/js/main.js"></script>
 </body>
