--- a/parceiros.html
+++ b/parceiros.html
@@ -22,7 +22,7 @@
 </head>
 
 <body class="box-border">
-    <header class="flex items-center justify-between p-2 font-barlow lg:p-0">
+    <header class="flex items-center justify-between p-2 font-barlow">
         <img src="src/images/circuito-logo.jpg" class="h-12 lg:h-14" alt="Logo da Ibra Academia de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
         lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
@@ -41,43 +41,52 @@
         </div>
     </header>
 
-    <main class="bg-slate-500 flex flex-col items-center h-82h">
-        <h1 class="uppercase text-white text-3xl font-barlow py-4">Nossos parceiros</h1>
-        <article class="bg-white p-2 flex flex-col items-center pt-8 pb-8">
-            <img src="src/images/parceiros-cbc.jpeg" class="rounded w-10/12" alt="">
-            <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl pb-2">Inspirar para o esporte e formar
-                    campeões</h2>
-                <p class="text-justify">O Comitê Brasileiro de Clubes é uma associação civil de origem
-                    esportiva criado em 1990 com a missão
-                    de desenvolver e implementar a política de formação de atletas, por meio de apoio aos clubes.</p>
-            </div>
-        </article>
+    <main>
+        <h1 class="bg-slate-500 text-center uppercase text-white text-3xl font-barlow py-4 lg:w-full">Nossos parceiros</h1>
 
-        <article class="bg-white p-2 flex flex-col items-center pb-8">
-            <img src="src/images/parceiros-asg.jpg" class="rounded w-10/12" alt="">
-            <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl pb-2">AGS tornando seus negócios possíveis
-                </h2>
-                <p class="text-justify">80 anos de tradição servindo a toda uma região. Compre as melhores
-                    marcas. Tudo o que você precisa está aqui!</p>
-            </div>
-        </article>
+        <section id="parceiros" class="flex flex-col items-center lg:justify-between lg:h-screen lg:pt-8">
+            <div id="parceiros__container--top" class="flex flex-col items-center lg:flex-row lg:justify-center lg:gap-x-4">
+                <article
+                    class="bg-white p-2 flex flex-col items-center pt-8 pb-8 section__article--lg">
+                    <img src="src/images/parceiros-cbc.jpeg" class="rounded w-10/12 sm:w-6/12 lg:h-32 object-contain"
+                        alt="Logo da CBC">
+                    <div id="article__text--container" class="m-4 font-barlow w-10/12">
+                        <h2 class="uppercase font-semibold text-center text-xl pb-2">Inspirar para o esporte e formar
+                            campeões</h2>
+                        <p class="text-justify">O Comitê Brasileiro de Clubes é uma associação civil de origem
+                            esportiva criado em 1990 com a missão de desenvolver e implementar a política de formação de 
+                            atletas, por meio de apoio aos clubes.
+                        </p>
+                    </div>
+                </article>
 
-        <article class="bg-white p-2 flex flex-col items-center pb-8">
-            <img src="src/images/parceiros-rc.jpg" class="rounded w-10/12" alt="">
-            <div id="article__text--container" class="m-4 font-barlow w-10/12">
-                <h2 class="uppercase font-semibold text-center text-xl pb-2">Constantemente desafiando a entregar
-                    o melhor aos nossos clientes</h2>
-                <p class="text-justify">Fundado em 2016, Rocha & Coningham Advogados Associados atua com
-                    destaque na advocacia de litígios e na estruturação de medidas para a prevenção de demandas e
-                    obtenção dos melhores resultados naquelas em trâmite.</p>
-            </div>
-        </article>
+                <article
+                    class="bg-white p-2 flex flex-col items-center pb-8 section__article--lg">
+                    <img src="src/images/parceiros-asg.jpg" class="rounded w-10/12" alt="Logo da AGS refrigeração">
+                    <div id="article__text--container" class="m-4 font-barlow w-10/12">
+                        <h2 class="uppercase font-semibold text-center text-xl pb-2">AGS tornando seus negócios possíveis</h2>
+                        <p class="text-justify">80 anos de tradição servindo a toda uma região. Compre as melhores
+                            marcas. Tudo o que você precisa está aqui!</p>
+                    </div>
+                </article>
 
-        <article class="bg-white p-2 flex flex-col items-center">
-            <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12" alt="">
-        </article>
+                <article
+                    class="bg-white p-2 flex flex-col items-center pb-8 section__article--lg">
+                    <img src="src/images/parceiros-rc.jpg" class="rounded w-10/12 lg:h-32 lg:object-contain" alt="Logo da RC associados">
+                    <div id="article__text--container" class="m-4 font-barlow w-11/12">
+                        <h2 class="uppercase font-semibold text-center text-xl pb-2">Constantemente desafiando a
+                            entregar o melhor aos nossos clientes</h2>
+                        <p class="text-justify">Fundado em 2016, atua com destaque na advocacia de litígios e na
+                            estruturação de medidas para a prevenção de demandas e obtenção dos melhores resultados
+                            naquelas em trâmite.</p>
+                    </div>
+                </article>
+            </div>
+
+            <article class="bg-white p-2 flex flex-col items-center sm:w-10/12 lg:pb-8">
+                <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12 lg:object-contain lg:h-24" alt="Logo da prefeitura de Caruaru">
+            </article>
+        </section>
     </main>
 
     <script src="src/js/main.js"></script>
