--- a/circuito.html
+++ b/circuito.html
@@ -21,9 +21,9 @@
     <title>O Circuito</title>
 </head>
 
-<body>
-    <header class="flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/circuito-logo.jpg" class="h-12 lg:h-16" alt="Logo do circuito Ibra de Tênis de Mesa">
+<body class="bg-blue-950">
+    <header class="bg-white flex items-center justify-between p-2 font-barlow">
+        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -48,8 +48,8 @@
         </div>
     </header>
 
-    <main class="bg-blue-950 h-screen lg:flex lg:items-center lg:justify-around">
-        <img src="src/images/circuito-layout.jpeg" class="lg:object-contain lg:h-screen" alt="Informações sobre o circuito">
+    <main class="bg-blue-950 h-82h flex items-center justify-center">
+        <img src="src/images/circuito-logo.png" class="h-40h lg:object-contain lg:h-70h" alt="Informações sobre o circuito">
     </main>
 
     <script src="src/js/main.js"></script>
