--- a/circuito.html
+++ b/circuito.html
@@ -23,7 +23,7 @@
 
 <body class="bg-blue-950">
     <header class="bg-white flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16" alt="Logo do circuito Ibra de Tênis de Mesa">
+        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -49,7 +49,7 @@
     </header>
 
     <main class="bg-blue-950 h-82h flex items-center justify-center">
-        <img src="src/images/circuito-logo.png" class="h-40h lg:object-contain lg:h-70h" alt="Informações sobre o circuito">
+        <img src="src/images/circuito-logo.png" class="h-40h lg:object-contain lg:h-60h" alt="Informações sobre o circuito">
     </main>
 
     <script src="src/js/main.js"></script>
