--- a/parceiros.html
+++ b/parceiros.html
@@ -41,8 +41,8 @@
         </div>
     </header>
 
-    <main>
-        <h1 class="bg-slate-500 text-center uppercase text-white text-3xl font-barlow py-4 lg:w-full">Nossos parceiros</h1>
+    <main class="bg-blue-950">
+        <h1 class="text-center uppercase text-white text-3xl font-barlow py-4 lg:w-full">Nossos parceiros</h1>
 
         <section id="parceiros" class="flex flex-col items-center lg:justify-between lg:h-screen lg:pt-8">
             <div id="parceiros__container--top" class="flex flex-col items-center lg:flex-row lg:justify-center lg:gap-x-4">
@@ -83,7 +83,7 @@
                 </article>
             </div>
 
-            <article class="bg-white p-2 flex flex-col items-center sm:w-10/12 lg:pb-8">
+            <article class="bg-white p-2 flex flex-col items-center sm:w-10/12 lg:pb-8 lg:w-full">
                 <img src="src/images/parceiros-prefeitura.jpeg" class="rounded w-10/12 lg:object-contain lg:h-24" alt="Logo da prefeitura de Caruaru">
             </article>
         </section>
