--- a/circuito.html
+++ b/circuito.html
@@ -48,9 +48,11 @@
         </div>
     </header>
 
-    <main class="bg-blue-950 h-82h flex items-center justify-center">
+    <main class="bg-blue-950 h-82h flex items-center justify-center flex-col gap-y-4">
         <img src="src/images/circuito-logo.png" class="h-40h lg:object-contain lg:h-60h" alt="Informações sobre o circuito">
+        <a href="src/images/circuito-layout.jpeg" target="_blank" id="circuito__main--link" class="uppercase text-white bg-black font-barlow text-xl rounded px-4 py-2 hover:bg-green-950 hover:duration-500">Layout oficial</a>
     </main>
 
     <script src="src/js/main.js"></script>
+    <script src="src/js/circuito.js"></script>
 </body>
