--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <main style="background-image: url('src/images/2.jpg'); background-size: cover;" class="flex flex-col items-center h-82h">
         <h2 id="main__subtitulo" class="uppercase font-barlow text-2xl text-white pt-8 animate__animated animate__flash animate__repeat-3">- Bem vindos! -</h2>
-        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra a Fábrica de campeões</h1>
+        <h1 id="main__titulo" class="uppercase text-white text-3xl mt-8 font-bold text-center">Academia Ibra: a Fábrica de campeões</h1>
         <div id="main__container--images" class="h-screen flex flex-col items-center justify-center gap-y-4">
             <h2 class="uppercase text-5xl text-white font-barlow">Circuito Ibra 2023</h2>
             <a href="circuito.html" id="main__button" class="main__button--style button__hover lg:w-3/5">Mais informações</a>
