Updating regulamento style

--- a/regulamento.html
+++ b/regulamento.html
@@ -23,7 +23,8 @@
 
 <body>
     <header class="flex items-center justify-between p-2 font-barlow">
-        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2" alt="Logo do circuito Ibra de Tênis de Mesa">
+        <img src="src/images/circuito-logo.png" class="h-12 lg:h-16 lg:ml-2"
+            alt="Logo do circuito Ibra de Tênis de Mesa">
         <nav class="hidden bg-slate-600 h-screen w-screen absolute top-16 right-0 p-4 uppercase animate__animated animate__slideInDown
             lg:bg-white lg:block lg:static lg:h-auto lg:text-lg lg:max-h-16">
             <ul class="lg:flex justify-center gap-x-10">
@@ -58,8 +59,8 @@
                 <h1 class="text-2xl uppercase text-center py-4 lg:text-3xl lg:py-8">Regulamento Circuito Ibra de Tênis
                     de
                     Mesa e Ping Pong</h1>
-                <article>
-                    <h3 class="uppercase text-xl">Sobre o circuito:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded w-auto">Sobre o circuito:</h3>
                     <p class="text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, foi criado com o intuito de
                         massificar
                         a modalidade em
@@ -69,8 +70,8 @@
                         interior do Estado que possui sede própria em Caruaru.</p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">História:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">História:</h3>
                     <p class="text-justify">O Circuito Ibra de Tênis de Mesa & Ping Pong, já aconteceu em 1999, 2000,
                         2001 e
                         2002, e entra agora
@@ -80,8 +81,8 @@
                     </p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">O circuito:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">O circuito:</h3>
                     <p class="text-justify">O Circuito Ibra foi criado para realizar um alto padrão de um evento de
                         tênis de
                         mesa, seguindo como
@@ -92,8 +93,8 @@
                         organizada para torneio.</p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">5ª edição:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">5ª edição:</h3>
                     <p class="text-justify">O circuito a partir desta 5ª edição será realizado para mesatenistas
                         federados
                         ou
@@ -107,8 +108,8 @@
             </section>
 
             <section id="equipamentosEestrutura">
-                <article>
-                    <h3 class="uppercase text-xl">Equipamentos e estrutura:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Equipamentos e estrutura:</h3>
                     <p class="text-justify">Todas as etapas da temporada de 2023 serão realizadas na sede da Academia
                         Ibra
                         de
@@ -121,8 +122,8 @@
                         interior de Pernambuco.</p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Estrutura da sede:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Estrutura da sede:</h3>
                     <ul class="list-disc list-inside">
                         <li>Mesas oficiais de tênis de mesa;</li>
                         <li>Tapete olímpico para tênis de mesa (para jogos realizados na sede da Ibra);</li>
@@ -138,8 +139,8 @@
                     </ul>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Formato do circuito:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Formato do circuito:</h3>
                     <ul class="list-disc list-inside">
                         <li>Competições de tênis de mesa (atletas federados ou não, mas já tem aulas ou já competem a
                             menos
@@ -150,31 +151,36 @@
                     </ul>
                 </article>
 
-                <h2 class="uppercase">Equipamentos autorizados para as competições de cada atleta inscrito:</h2>
+                <div class="flex flex-col items-center">
+                    <h2 class="uppercase text-xl bg-green-900 px-2 mb-2 rounded text-center">Equipamentos autorizados
+                        para as competições de cada atleta inscrito:</h2>
+                    <article class="flex flex-col items-center pb-6">
+                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Mesatenistas inscritos nas categorias de
+                            federados:</h3>
+                        <ul class="list-disc list-inside">
+                            <li>Apenas raquetes autorizadas pela ITTF;</li>
+                            <li>Não será autorizado camisas da cor branca ou shorts;</li>
+                            <li>Uso de Tênis apropriado para o tênis de mesa.</li>
+                        </ul>
+                    </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Mesatenistas inscritos nas categorias de federados:</h3>
-                    <ul class="list-disc list-inside">
-                        <li>Apenas raquetes autorizadas pela ITTF;</li>
-                        <li>Não será autorizado camisas da cor branca ou shorts;</li>
-                        <li>Uso de Tênis apropriado para o tênis de mesa.</li>
-                    </ul>
-                </article>
-
-                <article>
-                    <h3 class="uppercase text-xl">Praticantes de ping pong inscritos nas categorias:</h3>
-                    <ul class="list-disc list-inside">
-                        <li>Raquetes para ping pong sem necessidade de serem autorizadas pela ITTF, com qualquer tipo de
-                            superfície, de um lado ou do outro da raquete;</li>
-                        <li>Não será autorizado camisas da cor branca ou shorts;</li>
-                        <li>Uso de Tênis apropriado para a prática do ping pong.</li>
-                    </ul>
-                </article>
+                    <article class="flex flex-col items-center pb-6">
+                        <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Praticantes de ping pong inscritos nas
+                            categorias:</h3>
+                        <ul class="list-disc list-inside">
+                            <li>Raquetes para ping pong sem necessidade de serem autorizadas pela ITTF, com qualquer
+                                tipo de
+                                superfície, de um lado ou do outro da raquete;</li>
+                            <li>Não será autorizado camisas da cor branca ou shorts;</li>
+                            <li>Uso de Tênis apropriado para a prática do ping pong.</li>
+                        </ul>
+                    </article>
+                </div>
             </section>
 
             <section id="inscricoes">
-                <article>
-                    <h3 class="uppercase text-xl">Calendário para as inscrições:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Calendário para as inscrições:</h3>
                     <ul class="list-disc list-inside">
                         <li>1ª etapa - de 10 a 26 de maio;</li>
                         <li>2ª etapa - de 29 a 17 de junho;</li>
@@ -185,16 +191,16 @@
                     </ul>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Top 16:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Top 16:</h3>
                     <ul class="list-disc list-inside">
                         <li>As inscrições serão automáticas por meio das 16 melhores posições do ranking de cada divisão
                             (tênis de mesa) e categoria (ping pong).</li>
                     </ul>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Obs I:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Obs I:</h3>
                     <ul class="list-disc list-inside">
                         <li>Mínimo de 06 inscrições, sem limite por categoria ou divisão em cada etapa;</li>
                         <li>
@@ -205,8 +211,8 @@
                     </ul>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Valor das inscrições por modalidade</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Valor das inscrições por modalidade</h3>
                     <ul class="list-disc list-inside">
                         <li>Ping pong: R$ 30 ,00 (Cada categoria); </li>
                         <li>Tênis de Mesa: R$ 50,00 (Cada categoria).</li>
@@ -217,8 +223,8 @@
                     </p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Obs II:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Obs II:</h3>
                     <ul class="list-disc list-inside">
                         <li>Nas modalidade de tênis de mesa, o atleta poderá se escrever em até duas categorias, na sua
                             divisão e uma acima;</li>
@@ -230,8 +236,8 @@
             </section>
 
             <section id="calendario">
-                <article>
-                    <h3 class="uppercase text-xl">Calendário do circuito</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Calendário do circuito</h3>
                     <ul class="list-disc list-inside">
                         <li>02 a 04 de junho de 2023;</li>
                         <li>30 de junho a 02 de julho de 2023;</li>
@@ -246,8 +252,9 @@
                         de dezembro de 2023.</p>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Características dos inscritos por etapa:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 rounded">Características dos inscritos por etapa:
+                    </h3>
                     <ul class="list-disc list-inside">
                         <li>
                             Categorias de Tênis de Mesa: Jogadores matriculados em alguma escolinha de tênis de mesa ou
@@ -264,8 +271,8 @@
             </section>
 
             <section id="premiacoes">
-                <article>
-                    <h3 class="uppercase text-xl">Premiações:</h3>
+                <article class="flex flex-col pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded self-center">Premiações:</h3>
                     <ul class="list-disc list-inside">
                         <li>1º colocado: Troféu e Medalha (Tênis de Mesa);</li>
                         <li>2º colocado: Medalha de Prata (Tênis de Mesa);</li>
@@ -300,8 +307,8 @@
                     </ul>
                 </article>
 
-                <article>
-                    <h3 class="uppercase text-xl">Premiação TOP 16:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl bg-green-900 px-2 rounded">Premiação TOP 16:</h3>
                     <h4>Os campeões de cada modalidade, em suas referidas categorias receberão:</h4>
                     <ul class="list-disc list-inside">
                         <li>1º lugar - Troféu Hugo Hoyama + Medalha + Premiação em Dinheiro;</li>
@@ -314,9 +321,10 @@
             </section>
 
             <section id="divisoes">
-                <article>
-                    <h3 class="uppercase text-xl">Divisões que serão disputadas no circuito:</h3>
-                    <h4 class="uppercase">Masculino e Feminino:</h4>
+                <article class="flex flex-col items-center pb-6">
+                    <h3 class="uppercase text-xl text-center bg-green-900 px-2 mb-2 rounded">Divisões que serão disputadas no
+                        circuito:</h3>
+                    <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
                     <h5>Inscritos ou inscritas nas categorias de Ping Pong:</h5>
                     <ul class="list-disc list-inside pb-4">
                         <li>6 a 8 anos;</li>
@@ -332,7 +340,7 @@
                         <li>a partir de 70 anos.</li>
                     </ul>
 
-                    <h4 class="uppercase">Masculino e Feminino:</h4>
+                    <h4 class="uppercase bg-green-900 px-2 rounded">Masculino e Feminino:</h4>
                     <h5>Inscritos ou inscritas no tênis de mesa:</h5>
                     <ul class="list-disc list-inside pb-4">
                         <li>Divisão A;</li>
@@ -346,9 +354,10 @@
             </section>
 
             <section id="ranking">
-                <h3 class="uppercase">Ranking e forma de pontuação em cada modalidade e suas categorias:</h3>
+                <h3 class="uppercase bg-green-900 px-2 rounded w-auto text-center">Ranking e forma de pontuação em cada
+                    modalidade e suas categorias:</h3>
 
-                <article>
+                <article class="flex flex-col pb-6">
                     <h4>Competidores das categorias de PING PONG</h4>
                     <ul class="list-disc list-inside pb-4">
                         <li>1º lugar: 25 pontos;</li>
@@ -358,7 +367,7 @@
                     </ul>
                 </article>
 
-                <article>
+                <article class="flex flex-col pb-6">
                     <h4>Competidores das categorias de TÊNIS DE MESA</h4>
                     <h5>Divisão A</h5>
                     <ul class="list-disc list-inside pb-4">
