--- a/regulamento.html
+++ b/regulamento.html
@@ -354,11 +354,11 @@
             </section>
 
             <section id="ranking">
-                <h3 class="uppercase bg-green-900 px-2 rounded w-auto text-center">Ranking e forma de pontuação em cada
+                <h3 class="uppercase bg-green-900 text-xl px-2 mb-2 rounded w-auto text-center">Ranking e forma de pontuação em cada
                     modalidade e suas categorias:</h3>
 
-                <article class="flex flex-col pb-6">
-                    <h4>Competidores das categorias de PING PONG</h4>
+                <article class="flex flex-col items-center pb-6">
+                    <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de PING PONG</h4>
                     <ul class="list-disc list-inside pb-4">
                         <li>1º lugar: 25 pontos;</li>
                         <li>2º lugar: 18 pontos;</li>
@@ -367,8 +367,8 @@
                     </ul>
                 </article>
 
-                <article class="flex flex-col pb-6">
-                    <h4>Competidores das categorias de TÊNIS DE MESA</h4>
+                <article class="flex flex-col items-center pb-6">
+                    <h4 class="bg-green-900 px-2 rounded">Competidores das categorias de TÊNIS DE MESA</h4>
                     <h5>Divisão A</h5>
                     <ul class="list-disc list-inside pb-4">
                         <li>1º lugar: 150 pontos;</li>
@@ -419,18 +419,18 @@
                 </article>
             </section>
 
-            <section id="formato">
-                <h3>Formato da competição:</h3>
-                <article>
-                    <h4>Ping Pong</h4>
+            <section id="formato" class="flex flex-col items-center">
+                <h3 class="uppercase text-xl bg-green-900 px-2 mb-2 rounded">Formato da competição:</h3>
+                <article class="flex flex-col items-center pb-6">
+                    <h4 class="uppercase bg-green-900 px-2 rounded">Ping Pong</h4>
                     <ul class="list-disc list-inside pb-4">
                         <li>Nas primeiras fases: jogos melhores de 3 sets de 11 pontos cada;</li>
                         <li>Semifinais e finais: melhores de 5 sets de 11 pontos cada.</li>
                     </ul>
                 </article>
 
-                <article>
-                    <h4>Tênis de mesa</h4>
+                <article class="flex flex-col items-center pb-6">
+                    <h4 class="uppercase bg-green-900 px-2 rounded">Tênis de mesa</h4>
                     <ul class="list-disc list-inside pb-8">
                         <li>Nas primeiras fases: jogos melhores de 3 sets de 11 pontos cada;</li>
                         <li>Semifinais e finais: melhores de 5 sets de 11 pontos cada.</li>
